--- a/TRABALHO1/CSS/Home.css
+++ b/TRABALHO1/CSS/Home.css
@@ -7,7 +7,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-image: url('Img/1-51dd0dc8.png'); /* Caminho da imagem */
+    background-size: cover; /* Ajusta para cobrir toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita repetição */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +32,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #ffffff;
+    background-color: #e5e3e3;
     border-bottom: 1px solid #e0e0e0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: fixed;
